1) Fixing TrackAudioRenderer::Render() to interpret the second parameters as delay in frames, not in milliseconds. 2) Changing output buffer size back to "optimal". It was recently changed to use output buffer size in milliseconds, but this does not make much sence, because system (well, at least linux) provides default size in frames and does not care about milliseconds. For example, it can provide default values of 512 for any sample rate.

BUG=596174

Review URL: https://codereview.chromium.org/1891183002

Cr-Commit-Position: refs/heads/master@{#387600}

Former-commit-id: 8fc0d951347d29e48a2241173383657869cf506e